--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,11 @@
   font-display: swap;
 }
 
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html {
   height: 100%;
 }
@@ -25,6 +30,11 @@ body {
   line-height: 21px;
   color: #000000;
   background-color: #f2f2f2;
+  margin: 0 auto;
+  width: 1280px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 .visually-hidden {
@@ -47,6 +57,9 @@ body {
   background-color: #ffffff;
   text-decoration: none;
   text-transform: uppercase;
+  cursor: pointer;
+  border: none;
+  display: inline-block;
 }
 
 .navigation {
@@ -55,17 +68,13 @@ body {
   display: flex;
   min-width: 1200px;
   margin: 0 auto;
-  flex-direction: row;
-  justify-content: stretch;
-  align-items: flex-start;
   flex-wrap: wrap;
+  position: relative;
+  z-index: 1;
 }
 
 .navigation-logo {
-  display: block;
-  margin: 0;
   margin-left: 70px;
-  padding: 0;
   max-height: 64px;
 }
 
@@ -74,9 +83,14 @@ body {
   margin-left: 28px;
   padding: 0;
   list-style-type: none;
+  max-width: 460px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .navigation-link {
+  display: block;
+  padding: 20px 16px;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
@@ -84,6 +98,17 @@ body {
   background: #ffffff;
   text-decoration: none;
   text-transform: capitalize;
+  position: relative;
+}
+
+.navigation-link-current::before {
+  position: absolute;
+  right: 16px;
+  bottom: -1px;
+  left: 16px;
+  height: 2px;
+  background-color: #756257;
+  content: "";
 }
 
 .navigation-list-right {
@@ -100,37 +125,120 @@ body {
   display: flex;
 }
 
-.button-navigation {
-  background: #756157;
+.navigation-item-right:last-child {
+  margin-left: 20px;
 }
 
+.navigation-item-right .navigation-link {
+  min-width: 18px;
+  min-height: 24px;
+}
+
+.navigation-user{
+  display: block;
+  width: 44px;
+  color: #000000;
+  background-color: #FFFFFF;
+  text-decoration: none;
+  text-transform: capitalize;
+  position: relative;
+}
+
+.button-navigation {
+  margin: 0;
+  padding: 8px 34px;
+  background: #756157;
+  border-radius: 4px;
+  align-self: center;
+}
+
+.navigation-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  fill: #000000;
+}
+
+.navigation-link-greencircle {
+  position: relative;
+}
+
+.navigation-link-greencircle::after {
+  position: absolute;
+  font-size: 10px;
+  line-height: 10px;
+  text-align: center;
+  color: #FFFFFF;
+  content: "12";
+  left: 20px;
+  top: 11px;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  background-color: #7DB54F;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
 /* Pages */
-.page-container {
+.main-container {
   width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  flex-grow: 1;
+  background-color: #FFFFFF;
+  color: #000000;
+}
+
+.page-container {
+  max-width: 1200px;
   margin: 0 auto;
 }
 
 .main-header {
+  width: 1200px;
   color: #000000;
-  background: #ffffff;
-}
-
-.main-index {
-  color: #000000;
-  background-image: url(../images/background/index-background.jpg);
-    background-size: 100% auto;
+  background-color: #ffffff;
   margin: 0 auto;
-  background-repeat: no-repeat;
 }
 
 .hero {
+  background-color: #756157;
+  min-height: 485px;
+  background-image: url(../images/background/index-background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero::after {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: url(../images/background/divider.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 57px;
+  background-size:cover;
+}
+
+.front-welcome-img {
   display: block;
   margin: 0 auto;
-  margin-bottom: 151px;
   padding-top: 51px;
 }
 
 .page-start-text {
+  margin-top: 69px;
   display: block;
   text-align: center;
 }
@@ -156,115 +264,260 @@ body {
 
 /* Преимущества */
 .advantages-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
   text-align: center;
+  flex-wrap: wrap;
 }
 
 .advantages-item {
+  margin: 0;
+  padding: 0;
+  width: calc(100%/3);
+  min-height: 384px;
   background-color: #82B3D3;
   color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
 }
 
-.color-1 {
+.advantages-item:first-child::after {
+  position: absolute;
+  right: 170px;
+  top: 178px;
+  left: 170px;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.3);;
+  content: "";
+}
+
+.advantages-item:last-child::after {
+  position: absolute;
+  right: 170px;
+  top: 178px;
+  left: 170px;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.3);;
+  content: "";
+}
+
+.advantages-item::after {
+  position: absolute;
+  right: 170px;
+  top: 178px;
+  left: 170px;
+  height: 2px;
+  background-color:rgba(0, 0, 0, 0.3);;
+  content: "";
+}
+
+.color-lightblue {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.color-2 {
+.color-verylightblue {
   background-color: rgba(131, 179, 211, 0.2);
 }
 
-.advantages-title-1 {
+.advantages-title-white {
+  margin: 0;
+  padding: 0;
+  padding-top: 92px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
+  text-align: center;
   text-transform: uppercase;
   color: #FFFFFF;
 }
 
-.advantages-title-2 {
+.advantages-title-black {
+  margin: 0;
+  padding: 0;
+  padding-top: 102px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
+  text-align: center;
   text-transform: uppercase;
   color: #000000;
 }
 
-.advantages-description-1 {
+.advantages-description-white {
+  margin: 0;
+  padding: 0;
+  padding-top: 62px;
   font-size: 18px;
   line-height: 21px;
+  text-align: center;
   color: #FFFFFF;
 }
 
-.advantages-description-2 {
+.advantages-description-black {
+  margin: 0;
+  padding: 0;
+  padding-top: 62px;
   font-size: 18px;
   line-height: 21px;
+  text-align: center;
   color: #333333;
+}
+
+.advantages-image {
+  display: flex;
 }
 
 /* Доступный сервис */
 .services-list {
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+}
+
+.services-item {
+  margin: 0;
+  padding: 0;
+  min-width: 400px;
+  min-height: 384px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.icon-house {
+  background-image: url(../images/icons/housing.svg);
+  background-size: 76px 72px;
+  background-repeat: no-repeat;
+  background-position: center top 80px;
+}
+
+.icon-eating {
+  background-image: url(../images/icons/eating.svg);
+  background-size: 75px 70px;
+  background-repeat: no-repeat;
+  background-position: center top 81px;
+}
+.icon-souvenir {
+  background-image: url(../images/icons/souvenir.svg);
+  background-size: 65px 76px;
+  background-repeat: no-repeat;
+  background-position: center top 78px;
 }
 
 .services-title {
+  margin: 0;
+  padding: 0;
+  margin-top: 182px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
+  text-align: center;
   color: #000000;
 }
 
 .services-description {
+  margin: 0;
+  margin-top: 30px;
+  padding: 0;
   font-size: 18px;
   line-height: 21px;
+  text-align: center;
   color: #333333;
 }
 
 /* Поиск гостиницы */
 .hotels {
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .hotels-title {
+  margin: 0;
+  padding: 0;
+  margin-top: 96px;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
+  text-align: center;
   text-transform: uppercase;
   color: #000000;
 }
 
 .hotels-description {
+  margin: 0;
+  padding: 0;
+  margin-top: 20px;
   font-size: 22px;
   line-height: 26px;
+  text-align: center;
   color: #333333;
 }
 
-.button-hotels {
+.button-search-container {
+  margin: 0;
+  padding: 0;
+  margin-top: 62px;
+  margin-bottom: 104px;
+  text-align: center;
+}
+
+.button-search-hotels {
+  font-weight: 700;
+  text-align: center;
+  color: #FFFFFF;
+  text-decoration: none;
+  text-transform: uppercase;
+  cursor: pointer;
+  border: none;
   font-size: 20px;
   line-height: 36px;
+  padding: 12px 50px;
   background-color: #756157;
+  border-radius: 4px;
 }
 
 /*Подписка*/
 .subscribe-block {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: #000000;
   background-image: url(../images/background/view-sedona.png);
   margin: 0 auto;
-  min-height: 411px;
+  min-height: 414px;
   background-repeat: no-repeat;
 }
 
 .subscribe-title {
+  margin: 0;
+  padding: 0;
+  margin-top: 96px;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
+  text-align: center;
   text-transform: uppercase;
   color: #ffffff;
 }
 
 .subscribe-description {
+  margin: 0;
+  padding: 0;
+  margin-top: 20px;
+  margin-bottom: 54px;
   font-size: 22px;
   line-height: 26px;
+  text-align: center;
   color: #ffffff;
 }
 
@@ -284,20 +537,25 @@ body {
   padding: 40px 70px 30px;
   flex-direction: row;
   align-items: center;
+  background-color: #FFFFFF;
+}
+
+.footer-social-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .footer-social-item {
   margin: 0;
   padding: 0;
-  min-width: 48px;
-  min-height: 40px;
 }
 
-.button-social {
-  background-color: #FFFFFF;
-}
-
-.footer-contacts-address-phone {
+.footer-contacts-phone {
   font-style: normal;
   font-size: 40px;
   line-height: 40px;
@@ -305,6 +563,53 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
+}
+
+.footer-contacts-phone:hover {
+  color: #756157;
+}
+.footer-contacts-phone:focus {
+  color: #756157;
+}
+.footer-contacts-phone:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+.footer-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FFFFFF;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 48px;
+  height: 40px;
+}
+
+.footer-social-logo {
+  fill: #83B3D3;
+}
+.footer-social-link:hover .footer-social-logo {
+  fill: #68A2CA;
+}
+.footer-social-link:focus .footer-social-logo {
+  fill: #68A2CA;
+}
+.footer-social-link:active .footer-social-logo {
+  fill:rgba(104, 162, 202, 0.3);
+}
+
+.htmlacademy-icon {
+  fill: #000000;
+}
+.footer-social-htmlacademy:hover .htmlacademy-icon {
+  fill: #756157;
+}
+.footer-social-htmlacademy:focus .htmlacademy-icon {
+  fill: #756157;
+}
+.footer-social-htmlacademy:active .htmlacademy-icon {
+  fill: rgba(117, 97, 87, 0.3);
 }
 
 /*Каталог*/
@@ -333,15 +638,30 @@ body {
   padding: 0;
   list-style-type: none;
   display: flex;
+  position: relative;
+}
+
+.breadcrumbs::before{
+  position: absolute;
+  content: "";
+  top: 6px;
+  left: 24px;
+  background-image: url(../images/icons/arrow.svg);
+  background-repeat: no-repeat;
+  width: 8px;
+  height: 11px;
 }
 
 .breadcrumbs-link {
+  margin-right: 28px;
   font-size: 16px;
   line-height: 21px;
   color: #ffffff;
 }
 
 .inner-header-title {
+  margin: 0;
+  padding: 0;
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
@@ -395,13 +715,23 @@ body {
 }
 
 .button-filter-apply {
+  margin: 0;
+  margin-top: 56px;
+  padding: 8px 50px;
+  min-width: 190px;
   color: #FFFFFF;
   background-color: #82B3D3;
+  border-radius: 4px;
 }
 
 .button-filter-reset {
+  margin: 0;
+  padding: 8px 50px;
+  margin-top: 32px;
+  min-width: 190px;
   color: #FFFFFF;
   background-color: transparent;
+  border: 0;
 }
 
 .sorting {
@@ -435,30 +765,133 @@ body {
   padding: 0;
   list-style-type: none;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.sorting-view-item {
-  min-height: 48px;
-  min-width: 48px;
+.sorting-view-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 48px;
+  width: 48px;
   margin-left: 8px;
-  padding: 16px 17px;
   box-sizing: border-box;
-  border: 2px solid #000000;
-  border-radius: 4px;
-  display: block;
-}
-
-.border-grey {
   border: 2px solid #E5E5E5;
+  border-radius: 4px;
 }
 
-.hotels-card-list {
+.sorting-view-link-current {
+  border-color: #000000;
+}
+
+.sorting-view-link:hover {
+  border-color: #000000;
+}
+
+.sorting-view-link:focus {
+  border: 2px solid #68A2CA;
+  outline: none;
+}
+
+.sorting-view-link:active {
+  border-color: #000000;
+}
+
+.hotels-catalog {
+  margin: 0 70px;
+  padding: 0;
+}
+
+.hotels-catalog-list {
+  display: grid;
+  grid-template-columns: repeat(3,340px);
+  gap: 20px;
+}
+
+.hotels-card {
+  border: 1px solid #E6E6E6;
+  border-radius: 4px;
+  padding: 20px;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.hotels-card-info {
+  display: grid;
+  grid-template-columns: repeat(2,140px);
+  gap: 16px 20px;
+}
+
+.button-hotels-card {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: #000000;
+}
+
+.button-detail {
+  padding: 8px 25px;
+  background: #756157;
+  border-radius: 4px;
+}
+
+.button-favourites {
+  padding: 8px 20px;
+  border: none;
+  background: #82B3D3;
+  border-radius: 4px;
+}
+.button-favourites-on {
+  padding: 8px 18px;
+  border: none;
+  background: #7DB54F;
+  border-radius: 4px;
+}
+
+.hotel-stars {
+  min-width: 140px;
+  min-height: 37px;
+}
+
+.four-stars{
+  background-image: url(../images/icons/stars-4.svg);
+  background-repeat: no-repeat;
+}
+.three-stars {
+  background-image: url(../images/icons/stars-3.svg);
+  background-repeat: no-repeat;
+}
+.two-stars{
+  background-image: url(../images/icons/stars-2.svg);
+  background-repeat: no-repeat;
+}
+
+.rating {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 37px;
+  min-width: 140px;
+  text-align: center;
+  background: #F2F2F2;
+  border-radius: 4px;
+}
+
+.hotels-catalog-list{
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
 
 .hotels-card-title {
+  margin: 16px 0;
+  padding: 0;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -467,7 +900,6 @@ body {
 
 .hotels-card-link {
   text-decoration: none;
-  text-transform: capitalize;
 }
 
 .hotels-card-type {
@@ -476,16 +908,36 @@ body {
   color: #333333;
 }
 
+.hotels-card-price {
+  justify-self: end;
+  font-size: 18px;
+  line-height: 21px;
+  color: #333333;
+}
+
 .rating {
+  margin: 0;
+  padding: 0;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
   color: #333333;
 }
 
+.pagination::before {
+  position: absolute;
+  top: -40px;
+  content: "";
+  width: 1060px;
+  height: 1px;
+  background-color: #E6E6E6;
+  transform: rotate(180deg);
+}
+
 /*Пагинация*/
 .pagination {
-  margin: 0 70px 60px;
+  position: relative;
+  margin: 80px 0 60px;
   padding: 0;
   min-width: 1060px;
   display: flex;
@@ -500,7 +952,7 @@ body {
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
-  padding: 12px 24px;
+  padding-top: 12px;
   color: #FFFFFF;
   background-color: #82B3D3;
   min-width: 60px;
@@ -509,16 +961,19 @@ body {
   box-sizing: border-box;
   border-radius: 4px;
   text-align: center;
-  text-transform: uppercase;
   text-decoration: none;
 }
 
-.pagination-link:last-child {
-  padding: 12px 18px;
-}
-
 .pagination-current {
-  color: #000000;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  padding-top: 12px;
+  min-width: 60px;
+  min-height: 60px;
+  display: block;
+  box-sizing: border-box;
+  text-align: center;
   background-color: #F2F2F2;
   border-radius: 4px;
 }
@@ -529,10 +984,26 @@ body {
   line-height: 26px;
   padding: 16px 21px;
   color: #000000;
-  background-color: #FFFFFF;
   text-align: center;
-  text-transform: uppercase;
-  text-decoration: none;
+  display: block;
+}
+
+.pagination-link:hover {
+  color: #FFFFFF;
+  background-color: #68A2CA;
+  border: 1px solid #82B3D3;
+  padding-top: 11px;
+}
+.pagination-link:focus {
+  color: #FFFFFF;
+  background-color: #68A2CA;
+  border: 1px solid #82B3D3;
+  padding-top: 11px;
+  outline: none;
+}
+.pagination-link:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #82B3D3;
 }
 
 .subscribe-catalog {
