--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,14 +35,13 @@ html {
 }
 
 body {
-  font-family: "PT Sans", sans-serif;
-  font-weight: 400;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   line-height: 21px;
   color: #000000;
   background-color: #f2f2f2;
   margin: 0 auto;
-  width: 1200px;
+  min-width: 1200px;
   display: flex;
   flex-direction: column;
   min-height: 100%;
@@ -55,6 +54,7 @@ img {
 }
 
 .button {
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
@@ -69,6 +69,11 @@ img {
 }
 
 /* Навигация */
+.main-header {
+  min-height: 64px;
+  color: #000000;
+}
+
 .navigation {
   color: #000000;
   background-color: #FFFFFF;
@@ -141,9 +146,10 @@ img {
   min-height: 24px;
 }
 
-.navigation-user{
+.navigation-user {
   display: block;
-  width: 44px;
+  min-width: 44px;
+  min-height: 64px;
   color: #000000;
   background-color: #FFFFFF;
   text-decoration: none;
@@ -152,6 +158,7 @@ img {
 }
 
 .button-navigation {
+  width: 92px;
   margin: 0;
   padding: 8px 34px;
   background: #756157;
@@ -186,7 +193,6 @@ img {
   justify-content: center;
   align-items: center;
 }
-
 
 /* Pages */
 .main-container {
@@ -231,7 +237,7 @@ img {
   background-position: center;
   background-repeat: no-repeat;
   height: 57px;
-  background-size:cover;
+  background-size: cover;
 }
 
 .front-welcome-img {
@@ -353,6 +359,7 @@ img {
   margin: 0;
   padding: 0;
   padding-top: 30px;
+  padding-bottom: 30px;
   font-size: 18px;
   line-height: 21px;
   text-align: center;
@@ -363,6 +370,7 @@ img {
   margin: 0;
   padding: 0;
   padding-top: 30px;
+  padding-bottom: 30px;
   font-size: 18px;
   line-height: 21px;
   text-align: center;
@@ -405,6 +413,7 @@ img {
   background-repeat: no-repeat;
   background-position: center top 81px;
 }
+
 .icon-souvenir {
   background-image: url(../images/icons/souvenir.svg);
   background-size: 65px 76px;
@@ -428,6 +437,7 @@ img {
   margin: 0;
   margin-top: 30px;
   padding: 0;
+  padding-bottom: 30px;
   font-size: 18px;
   line-height: 21px;
   text-align: center;
@@ -561,7 +571,7 @@ img {
   justify-content: space-between;
   width: 1060px;
   margin: 0 auto;
-  padding: 40px 70px 30px;
+  padding: 45px 70px 35px;
   flex-direction: row;
   align-items: center;
   background-color: #FFFFFF;
@@ -595,9 +605,11 @@ img {
 .footer-contacts-phone:hover {
   color: #756157;
 }
+
 .footer-contacts-phone:focus {
   color: #756157;
 }
+
 .footer-contacts-phone:active {
   color: rgba(117, 97, 87, 0.3);
 }
@@ -616,25 +628,31 @@ img {
 .footer-social-logo {
   fill: #83B3D3;
 }
+
 .footer-social-link:hover .footer-social-logo {
   fill: #68A2CA;
 }
+
 .footer-social-link:focus .footer-social-logo {
   fill: #68A2CA;
 }
+
 .footer-social-link:active .footer-social-logo {
-  fill:rgba(104, 162, 202, 0.3);
+  fill: rgba(104, 162, 202, 0.3);
 }
 
 .htmlacademy-icon {
   fill: #000000;
 }
+
 .footer-social-htmlacademy:hover .htmlacademy-icon {
   fill: #756157;
 }
+
 .footer-social-htmlacademy:focus .htmlacademy-icon {
   fill: #756157;
 }
+
 .footer-social-htmlacademy:active .htmlacademy-icon {
   fill: rgba(117, 97, 87, 0.3);
 }
@@ -680,7 +698,7 @@ img {
   position: relative;
 }
 
-.breadcrumbs::before{
+.breadcrumbs::before {
   position: absolute;
   content: "";
   top: 6px;
@@ -702,9 +720,10 @@ img {
   margin: 0 70px 70px 70px;
   padding: 0;
   min-width: 1060px;
+}
+
+.hotels-filter {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
 .hotels-filter-group {
@@ -712,6 +731,10 @@ img {
   margin-right: 70px;
   padding: 0;
   border: none;
+}
+
+.hotels-filter-group-price {
+  margin-left: 82px;
 }
 
 .hotels-filter-title {
@@ -803,14 +826,6 @@ img {
   content: "";
 }
 
-.hostel-search {
-  margin-right: 82px;
-}
-
-.filter-price {
-  margin-right: 71px;
-}
-
 .hotels-filter-item:not(:last-child) {
   margin-bottom: 16px;
 }
@@ -900,6 +915,7 @@ img {
 /*убирает стрелочки*/
 .field-price::-webkit-outer-spin-button,
 .field-price::-webkit-inner-spin-button {
+  -webkit-appearance: none;
   appearance: none;
   margin: 0;
 }
@@ -1111,8 +1127,13 @@ img {
 
 .hotels-catalog-list {
   display: grid;
-  grid-template-columns: repeat(3,340px);
+  grid-template-columns: repeat(3, 340px);
   gap: 20px;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 40px;
+  list-style-type: none;
+  border-bottom: 1px solid #E6E6E6;
 }
 
 .hotels-card {
@@ -1126,8 +1147,23 @@ img {
 
 .hotels-card-info {
   display: grid;
-  grid-template-columns: repeat(2,140px);
+  grid-template-columns: repeat(2, 140px);
   gap: 16px 20px;
+}
+
+.hotels-card-title {
+  margin: 15px 0;
+  padding: 0;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+}
+
+.hotels-card-link {
+  display: flex;
+  flex-wrap: wrap;
+  text-decoration: none;
 }
 
 .button-hotels-card {
@@ -1147,12 +1183,58 @@ img {
   border-radius: 4px;
 }
 
+.button-detail:hover,
+.button-detail:focus,
+.button-navigation:hover,
+.button-navigation:focus,
+.button-search-hotels:hover,
+.button-search-hotels:focus {
+  background: #615048;
+  outline: none;
+}
+
+.button-detail:active,
+.button-navigation:active,
+.button-search-hotels:active {
+  background: #756157;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button-detail:disabled,
+.button-favourites:disabled,
+.button-favourites-on:disabled,
+.button-navigation:disabled,
+.button-search-hotels:disabled,
+.button-subscribe:disabled,
+.button-filter-apply:disabled {
+  background: #E5E5E5;
+  color: #FFFFFF;
+}
+
 .button-favourites {
   padding: 8px 20px;
   border: none;
   background: #82B3D3;
   border-radius: 4px;
 }
+
+.button-favourites:hover,
+.button-favourites:focus,
+.button-subscribe:hover,
+.button-subscribe:focus,
+.button-filter-apply:hover,
+.button-filter-apply:focus {
+  background: #68A2CA;
+  outline: none;
+}
+
+.button-favourites:active,
+.button-subscribe:active,
+.button-filter-apply:active {
+  background: #82B3D3;
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .button-favourites-on {
   padding: 8px 18px;
   border: none;
@@ -1160,20 +1242,32 @@ img {
   border-radius: 4px;
 }
 
+.button-favourites-on:hover,
+.button-favourites-on:focus {
+  background: #6C9E42;
+}
+
+.button-favourites-on:active {
+  background: #7DB54F;
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .hotel-stars {
   min-width: 140px;
   min-height: 37px;
 }
 
-.four-stars{
+.four-stars {
   background-image: url(../images/icons/stars-4.svg);
   background-repeat: no-repeat;
 }
+
 .three-stars {
   background-image: url(../images/icons/stars-3.svg);
   background-repeat: no-repeat;
 }
-.two-stars{
+
+.two-stars {
   background-image: url(../images/icons/stars-2.svg);
   background-repeat: no-repeat;
 }
@@ -1187,25 +1281,12 @@ img {
   text-align: center;
   background: #F2F2F2;
   border-radius: 4px;
-}
-
-.hotels-catalog-list{
   margin: 0;
   padding: 0;
-  list-style-type: none;
-}
-
-.hotels-card-title {
-  margin: 16px 0;
-  padding: 0;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  color: #000000;
-}
-
-.hotels-card-link {
-  text-decoration: none;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #333333;
 }
 
 .hotels-card-type {
@@ -1220,29 +1301,11 @@ img {
   line-height: 21px;
   color: #333333;
 }
-.rating {
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-  line-height: 20px;
-  text-transform: uppercase;
-  color: #333333;
-}
-
-.pagination::before {
-  position: absolute;
-  top: -40px;
-  content: "";
-  width: 1060px;
-  height: 1px;
-  background-color: #E6E6E6;
-  transform: rotate(180deg);
-}
 
 /*Пагинация*/
 .pagination {
   position: relative;
-  margin: 80px 0 60px;
+  margin: 40px 0 60px;
   padding: 0;
   min-width: 1060px;
   display: flex;
@@ -1299,6 +1362,7 @@ img {
   border: 1px solid #82B3D3;
   padding-top: 11px;
 }
+
 .pagination-link:focus {
   color: #FFFFFF;
   background-color: #68A2CA;
@@ -1306,6 +1370,7 @@ img {
   padding-top: 11px;
   outline: none;
 }
+
 .pagination-link:active {
   color: rgba(255, 255, 255, 0.3);
   background-color: #82B3D3;
