--- a/styles/styles.css
+++ b/styles/styles.css
@@ -90,14 +90,17 @@ img {
   max-height: 64px;
 }
 
-.navigation-logo:hover,
-.navigation-logo:focus {
-  background-color: #82B3D3;
-  outline: none;
+.navigation-logo:hover .page-header-logo {
+  opacity: 0.6;
 }
 
-.navigation-logo:active {
-  background-color: #68A2CA;
+.navigation-logo:focus-visible .page-header-logo {
+  outline: auto;
+  outline-color: #000000;
+}
+
+.navigation-logo:active .page-header-logo {
+  opacity: 0.3;
 }
 
 .navigation-list {
@@ -133,16 +136,22 @@ img {
   content: "";
 }
 
-.navigation-link:hover,
-.navigation-link:focus {
-  color: #FFFFFF;
-  background-color: #82B3D3;
-  outline: none;
+.navigation-link:hover {
+  opacity: 0.6;
+}
+
+.navigation-link:focus-visible {
+  outline-offset: -1px;
+}
+
+@supports not selector(:focus-visible) {
+  .navigation-link:focus {
+    outline-offset: -1px;
+  }
 }
 
 .navigation-link:active {
-  background: #68A2CA;
-  color: rgba(255, 255, 255, 0.3);
+  opacity: 0.3;
 }
 
 .navigation-list-right {
@@ -179,14 +188,22 @@ img {
   position: relative;
 }
 
-.navigation-user:hover,
-.navigation-user:focus {
-  background-color: #82B3D3;
-  outline: none;
+.navigation-user:hover {
+  opacity: 0.6;
+}
+
+.navigation-user:focus-visible {
+  outline-offset: -1px;
+}
+
+@supports not selector(:focus-visible) {
+  .navigation-user:focus {
+    outline-offset: -1px;
+  }
 }
 
 .navigation-user:active {
-  background: #68A2CA;
+  opacity: 0.3;
 }
 
 .button-navigation {
@@ -227,20 +244,15 @@ img {
 }
 
 /* Pages */
-.main-container {
-  width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-  flex-grow: 1;
-  background-color: #FFFFFF;
-  color: #000000;
-}
-
 .page-container {
-  max-width: 1200px;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  width: 1200px;
+  min-height: 100vh;
   margin: 0 auto;
+  background-color: #ffffff;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 .main-header {
@@ -519,7 +531,7 @@ img {
   align-items: center;
   color: #000000;
   background-image: url(../images/background/view-sedona.jpg);
-  background-color: #ACAC69;
+  background-color: #83cdff;
   margin: 0 auto;
   min-height: 414px;
   background-repeat: no-repeat;
@@ -562,6 +574,28 @@ img {
   width: 432px;
   height: 52px;
   border-radius: 4px 0 0 4px;
+}
+
+.field-email::placeholder {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.field-email:hover {
+  background-color: #e6e6e6;
+}
+
+.field-email:focus-visible {
+  outline: 3px solid #83b3d3;
+}
+
+@supports not selector(:focus-visible) {
+  .field-email:focus {
+    outline: 3px solid #83b3d3;
+  }
+}
+
+.field-email:active {
+  outline: 2px solid #000000;
 }
 
 .button-subscribe {
@@ -1404,4 +1438,334 @@ img {
 
 .color-black {
   color: #000000;
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+}
+
+.modal-container-close {
+  display: none;
+}
+
+.modal-auth {
+  position: relative;
+  width: 717px;
+  padding: 64px 70px;
+  background-color: #ffffff;
+  border-radius: 30px;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+}
+
+.modal-close-button {
+  position: absolute;
+  right: 52px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 52px;
+  height: 52px;
+  background-color: #f2f2f2;
+  border: none;
+  border-radius: 50%;
+}
+
+.modal-close-button:hover {
+  background-color: #e6e6e6;
+}
+
+.modal-close-button:focus-visible {
+  background-color: #e6e6e6;
+  outline: 3px solid #83b3d3;
+}
+
+@supports not selector(:focus-visible) {
+  .modal-close-button:focus {
+    background-color: #e6e6e6;
+    outline: 3px solid #83b3d3;
+  }
+}
+
+.modal-close-button:active svg {
+  opacity: 0.3;
+}
+
+.modal-content-title {
+  margin: 0 50px 64px 0;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.modal-content-container {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 48px;
+}
+
+.modal-content-container:not(.no-calendar)::after {
+  content: url("../images/icons/calendar.svg");
+  position: absolute;
+  top: 50%;
+  right: 22px;
+  transform: translateY(-50%);
+  opacity: 0.3;
+}
+
+.modal-content-label {
+  display: block;
+  width: 137px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #000000;
+  text-transform: capitalize;
+}
+
+.modal-content-input {
+  width: calc(100% - 137px);
+  min-height: 48px;
+  padding-right: 50px;
+  padding-left: 20px;
+  font: inherit;
+  font-weight: 700;
+  line-height: 24px;
+  text-align: left;
+  color: #000000;
+  background-color: #f2f2f2;
+  border: none;
+  border-radius: 4px;
+}
+
+.modal-content-input::placeholder {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.modal-content-message {
+  position: absolute;
+  top: calc(100% + 4px);
+  left: 157px;
+  font-size: 16px;
+}
+
+.error-message {
+  color: #ff5757;
+}
+
+.error-message-hide .error-message {
+  display: none;
+}
+
+.info-message-hide .info-message {
+  display: none;
+}
+
+.modal-content-input:hover {
+  background-color: #e6e6e6;
+}
+
+.modal-content-input:focus {
+  background-color: #e6e6e6;
+  outline: 3px solid #83b3d3;
+}
+
+.modal-content-input:active {
+  background-color: #f2f2f2;
+  outline: 2px solid #000000;
+}
+
+.modal-content-container-guests {
+  display: flex;
+  align-items: center;
+}
+
+.modal-content-container-kids {
+  width: 242px;
+}
+
+.modal-content-container-kids .modal-content-label {
+  width: auto;
+  padding: 0;
+}
+
+.modal-content-container-value {
+  position: relative;
+  margin-left: auto;
+}
+
+.modal-content-input-value {
+  display: block;
+  width: 110px;
+  padding-right: 40px;
+  padding-left: 40px;
+  text-align: center;
+}
+
+.modal-content-value-button {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.value-down {
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+}
+
+.value-up {
+  top: 50%;
+  right: -10px;
+  transform: translateX(-100%) translateY(-50%);
+}
+
+.modal-content-value-button:hover svg {
+  fill: #000000;
+  fill-opacity: 1;
+}
+
+.modal-content-value-button:focus {
+  outline: none;
+}
+
+.modal-content-value-button:focus-visible {
+  outline: 3px solid #82b3d3;
+  fill: #000000;
+  fill-opacity: 1;
+}
+
+@supports not selector(:focus-visible) {
+  .modal-content-value-button:focus {
+    outline: 3px solid #82b3d3;
+    fill: #000000;
+    fill-opacity: 1;
+  }
+}
+
+.modal-content-value-button:active svg {
+  fill-opacity: 0.2;
+}
+
+.modal-content-find-button {
+  display: block;
+  width: 100%;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color: #83b3d3;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.modal-content-find-button:hover {
+  background-color: #68a2ca;
+}
+
+.modal-content-find-button:focus-visible {
+  background-color: #68a2ca;
+}
+
+@supports not selector(:focus-visible) {
+  .modal-content-find-button:focus {
+    background-color: #68a2ca;
+  }
+}
+
+.modal-content-find-button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.modal-content-tooltip {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.modal-content-tooltip-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 26px;
+  height: 26px;
+  background-color: #83b3d3;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.modal-content-tooltip-button:focus-visible {
+  background-color: #68a2ca;
+}
+
+@supports not selector(:focus-visible) {
+  .modal-content-tooltip-button:focus {
+    background-color: #68a2ca;
+  }
+}
+
+.modal-content-tooltip-button:hover + .modal-content-tooltip-text {
+  display: block;
+}
+
+.modal-content-tooltip-button:focus-visible + .modal-content-tooltip-text {
+  display: block;
+}
+
+@supports not selector(:focus-visible) {
+  .modal-content-tooltip-button:focus + .modal-content-tooltip-text {
+    display: block;
+  }
+}
+
+.modal-content-tooltip-text {
+  position: absolute;
+  z-index: 1;
+  display: none;
+  min-width: 256px;
+  margin: 15px 0 0 13px;
+  padding: 15px 18px 18px 22px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  text-transform: none;
+  background-color: #333333;
+  border-radius: 10px;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+  transform: translateX(-50%);
+}
+
+.modal-content-tooltip-text::before {
+  content: "";
+  position: absolute;
+  top: -9px;
+  left: 50%;
+  width: 19px;
+  height: 9px;
+  background-image: url("../images/tooltip-arrow.svg");
+  transform: translateX(-50%);
 }
